; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_max77693.c_max77693_resume.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_max77693.c_max77693_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.i2c_client = type { i32 }
%struct.max77693_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @max77693_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max77693_resume(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.i2c_client*, align 8
  %4 = alloca %struct.max77693_dev*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call %struct.i2c_client* @to_i2c_client(%struct.device* %5)
  store %struct.i2c_client* %6, %struct.i2c_client** %3, align 8
  %7 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %8 = call %struct.max77693_dev* @i2c_get_clientdata(%struct.i2c_client* %7)
  store %struct.max77693_dev* %8, %struct.max77693_dev** %4, align 8
  %9 = load %struct.device*, %struct.device** %2, align 8
  %10 = call i64 @device_may_wakeup(%struct.device* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load %struct.max77693_dev*, %struct.max77693_dev** %4, align 8
  %14 = getelementptr inbounds %struct.max77693_dev, %struct.max77693_dev* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @disable_irq_wake(i32 %15)
  %17 = load %struct.max77693_dev*, %struct.max77693_dev** %4, align 8
  %18 = getelementptr inbounds %struct.max77693_dev, %struct.max77693_dev* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @enable_irq(i32 %19)
  br label %21

21:                                               ; preds = %12, %1
  ret i32 0
}

declare dso_local %struct.i2c_client* @to_i2c_client(%struct.device*) #1

declare dso_local %struct.max77693_dev* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i64 @device_may_wakeup(%struct.device*) #1

declare dso_local i32 @disable_irq_wake(i32) #1

declare dso_local i32 @enable_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
